feat: 테니스장 상세 페이지 및 지역별 목록 구현
- 지역별 테니스장 목록 페이지 추가 (/[district])
- 테니스장 상세 페이지 추가 (/[district]/[courtId])
- 테이블 파싱 로직 개선 (블록 기반 파싱)
  - 회비환불 테이블 (데이터 항목 병합)
  - 코트대관 이용료 환불기준 (2컬럼)
  - 코트사용 안내 (다중 컬럼)
- 즐겨찾기 API 및 컴포넌트 추가
- 테마 컨텍스트 및 인증 컨텍스트 추가
- Header/Footer 레이아웃 컴포넌트 분리
- Supabase 마이그레이션 추가

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "canvas-confetti": "^1.9.4",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
@@ -18,12 +21,16 @@
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.19.28",
     "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
 }
