--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
     "next": "16.1.1",
-
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.13",
     "@types/canvas-confetti": "^1.9.0",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20.19.28",
-
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.23",
