--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dompurify": "^3.3.1",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-simple-pull-to-refresh": "^1.3.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
