--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-simple-pull-to-refresh": "^1.3.4"
+    "react-simple-pull-to-refresh": "^1.3.4",
+    "swr": "^2.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
