--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-simple-pull-to-refresh": "^1.3.4",
     "swr": "^2.4.0"
   },
