--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "crons": [
     {
       "path": "/api/cron/snapshot",
-      "schedule": "0 */2 * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
