feat: add real-time air quality (PM2.5/PM10) display from Seoul Open Data API

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 SEOUL_OPEN_DATA_KEY=your-seoul-data-api-key
+SEOUL_AIR_QUALITY_KEY=your-seoul-air-quality-api-key
 NEXT_PUBLIC_KAKAO_MAP_KEY=your-kakao-map-key
 WEATHER_API_KEY=your-weather-api-key
