feat: add dust alert notification system with push notification infrastructure

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ SEOUL_OPEN_DATA_KEY=your-seoul-data-api-key
 SEOUL_AIR_QUALITY_KEY=your-seoul-air-quality-api-key
 NEXT_PUBLIC_KAKAO_MAP_KEY=your-kakao-map-key
 WEATHER_API_KEY=your-weather-api-key
+AIRKOREA_API_KEY=your-airkorea-api-key
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=your-vapid-public-key
+VAPID_PRIVATE_KEY=your-vapid-private-key
