--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "19.2.3",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-simple-pull-to-refresh": "^1.3.4",
-    "swr": "^2.4.0"
+    "swr": "^2.4.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
@@ -34,6 +35,7 @@
     "@types/node": "^20.19.28",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
