--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ yarn-error.log*
 # vercel
 .vercel
 
+# serwist service worker (auto-generated during build)
+public/sw.js
+public/sw.js.map
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
